--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="main.css" rel="stylesheet">
 
-    <title>Oğuzhan Okur Official</title>
+    <title>Oğuzhan Okur</title>
 </head>
 
 <body id="backgroundBody">
