İçerik renkleri değişti.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="main.css" rel="stylesheet">
 
-    <title>Oğuzhan Okur Officiall</title>
+    <title>Oğuzhan Okur</title>
 </head>
 
 <body id="backgroundBody">
@@ -15,9 +15,9 @@
         <h1 style="font-size:300%;">Oğuzhan Okur</h1>
         <p style="font-size:160%;">Computer Engineer/Web Developer</p>
         <div>
-            <a href="https://bit.ly/2XdGqaK" class="fa fa-facebook" target="_blank" rel="noopener noreferrer"></a>
-            <a href="https://bit.ly/3xJEUK2" class="fa fa-instagram" target="_blank" rel="noopener noreferrer"></a>
-            <a href="https://bit.ly/37EtQmR" class="fa fa-linkedin" target="_blank" rel="noopener noreferrer"></a>
+            <a href="https://www.facebook.com/oguzhan.okur.585/" class="fa fa-facebook" target="_blank" rel="noopener noreferrer"></a>
+            <a href="https://www.instagram.com/oguzhannokur/" class="fa fa-instagram" target="_blank" rel="noopener noreferrer"></a>
+            <a href="https://www.linkedin.com/in/o%C4%9Fuzhan-okur-553484207/" class="fa fa-linkedin" target="_blank" rel="noopener noreferrer"></a>
         </div>
 
     </div>
