Whatsapp mesajı değişti.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script>
         window.onload = function(){
         whatsapp_se_btn_phone = '905522844233'; //Telefon Numaranız
-                     whatsapp_se_btn_msg = 'Merhaba, nasıl yardımcı olabilirim?'; //Mesajınızı Yazınız
+                     whatsapp_se_btn_msg = 'Merhaba'; //Mesajınızı Yazınız
                  $(document.body).append('<div class="whatsapp-se-btn"></div>'),whatsapp_se_btn_base64="https://goo.gl/y2Sj2W",
                  $(".whatsapp-se-btn").attr("style","position:fixed;bottom:15px;right:15px;overflow:hidden;background:#1bd741;color:#ffffff;text-align:center;padding:4px 4px;z-index:9999999;cursor:pointer;box-shadow:#000000 0 0 5px;border-radius:100px;"),$(".whatsapp-se-btn").html('<img style="width: 45px;" src="'+whatsapp_se_btn_base64+'" alt="Whatsapp ile İletişime Geç" />'),$(".whatsapp-se-btn").attr("onclick",'location.href="https://wa.me/'+whatsapp_se_btn_phone+"?text="+whatsapp_se_btn_msg+'"');}
         </script>
